--- a/1-example/5-virtual-service.yaml
+++ b/1-example/5-virtual-service.yaml
@@ -8,12 +8,13 @@ spec:
   hosts:
     - first-app
   http:
+    # canary deployment
     - route:
         - destination:
             host: first-app
             subset: v1
-          weight: 0
+          weight: 90
         - destination:
             host: first-app
             subset: v2
-          weight: 100
+          weight: 10
