--- a/1-example/2-deployment-v2.yaml
+++ b/1-example/2-deployment-v2.yaml
@@ -18,7 +18,7 @@ spec:
         istio: monitor
     spec:
       containers:
-        - image: aputra/myapp-lesson155:latest
+        - image: giler053/myapp:latest
           imagePullPolicy: Always
           name: first-app
           env:
