--- a/1-example/1-deployment-v1.yaml
+++ b/1-example/1-deployment-v1.yaml
@@ -19,7 +19,7 @@ spec:
         #  sidecar.istio.io/inject: "true" - to spesific sidecar this deployment
     spec:
       containers:
-        - image: aputra/myapp-lesson155:latest
+        - image: giler053/myapp:latest
           imagePullPolicy: Always
           name: first-app
           env:
